tests/language/syntax/errors/missing-closing-brace.zena
// @target: statement
if (true) { let x = 1; // @error: Expected '\}'
